重大解耦，剥离 MySQL 代码（以及服务 MySQL 的 ORM框架）。